# simple-fastapi

./: .env  docker-compose.yaml  pyproject.toml
booksapp/: Dockerfile  main.py  pyproject.toml
booksapp/alembic/: env.py
booksapp/alembic/versions/: 0c0adbedf2b4_association_table_userbooks.py  15ad93719345_association_table_userbooks.py  207fdf00c866_.py  37ab9bdfbcf3_.py  4f8794f82da7_.py  8268c6d973f0_.py  84dfd1f973ec_init.py  dd212166fae8_init.py  ecfe45d429d7_init.py
booksapp/api_v1/: __init__.py  auth_users.py  crud.py  dependencies.py  schemas.py  views.py
booksapp/api_v1/auth/: jwt_auth.py  utils.py
booksapp/api_v1/auth/templates/: auth.html
booksapp/api_v1/authors/: crud.py  dependencies.py
booksapp/api_v1/books/: dependencies.py  schemas.py  views.py
booksapp/api_v1/dependencies/: access_tokens.py  backend.py  fastapi_users.py  strategy.py
booksapp/api_v1/dependencies/authentication/: fastapi_users.py  strategy.py  users.py
booksapp/api_v1/users/: crud.py  schemas.py
booksapp/books/models/: __init__.py  book.py
booksapp/core/: config.py
booksapp/core/authentication/: depebdencies.py  transport.py  user_manager.py
booksapp/core/models/: __init__.py  access_tokens.py  base.py  book.py  db_helper.py  mixins.py  profile.py  user.py
booksapp/core/schemas/: user.py
booksapp/core/types/: user_id.py
booksapp_front/: README.md  package-lock.json  package.json
