[tool.poetry]
name = "books"
version = "0.0.1"
description = "simple fastapi app for books"
authors = ["d.mischenko <d.mischenko@digital-sector.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
