[tool.poetry]
name = "books"
version = "0.0.1"
description = "simple fastapi app for books"
authors = ["d.mischenko <d.mischenko@digital-sector.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
uvicorn = "^0.30"
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pyjwt = "^2.7.0"
bcrypt = "^4.1.0"
multipart = "^0.2.5"
python-multipart = "^0.0.9"
cryptography = "^43.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
